Testing on Mobile Issue

--- a/index.css
+++ b/index.css
@@ -3,9 +3,6 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background: #0f0c29; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0f0c29, #302b63,#302b63, #24243e); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0f0c29, #302b63, #302b63, #24243e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 section {
@@ -76,6 +73,11 @@ section.hero{
     rgba(0, 0, 0, 0.9),
     rgba(0, 0, 0, 0.5)
   )
+}
+@media screen and (max-width: 768px) {
+    .hero::before {
+margin-top: 80px;
+}
 }
 
 
